--- a/coding_practice_JS/collapsibleTree/collapsibleTree.html
+++ b/coding_practice_JS/collapsibleTree/collapsibleTree.html
@@ -308,7 +308,6 @@
                 data.circle = circle;
                 data.x = 100;
                 data.y = 400;
-
             }
         };
         function cal(svg, data){
@@ -336,30 +335,247 @@
                 }
                 //31, is there any better way???
                 setClick(data, svg);
-
                 data.shown = true;
                 data.circle.setAttribute("fill", "aliceblue");
+                console.log(data.deep);
+                reDraw(svg, data.deep+1);
             }
             else if(data.shown == true){
-                //console.log(svg.childNodes);
-                for(var i in data.children){
-                    for(var j in svg.childNodes){
-                        if(data.children[i].circle == svg.childNodes[j]){
-                            svg.removeChild(svg.childNodes[j]);
-                            svg.removeChild(svg.childNodes[j-1]);
-                        }
-                    }
-                }
-//                while(svg.lastChild!=data.circle) {
-//                    svg.removeChild(svg.lastChild);
-//                    console.log(svg.lastChild);
-//                    console.log(data.circle);
-//
-//                }
+                console.log(findParent(data));
+                console.log(findNextSibling(data));
+                console.log(findFirstOnDeep(2));
+                console.log(findLastOnDeep(2));
+                console.log(findNumOnDeep(2));
+                deleteSvg(data, svg);
                 data.shown = false;
                 data.circle.setAttribute("fill", "skyblue");
             }
 
+        }
+        function reDraw(svg, num){
+            var intervalTmp = interval;
+            var count = 0;
+            var yTop = 100;
+            var yBot = 700;
+            var nodeNum  = findNumOnDeep(num);
+            var firstNode = findFirstOnDeep(num);
+            var lastNode = findLastOnDeep(num);
+            var parentNode = findParent(firstNode);
+            var parentDeep = parentNode.deep;
+            if(firstNode.y > 100)
+                yTop = firstNode.y;
+            if(lastNode.y < 700)
+                yBot = lastNode.y;
+            intervalTmp = (yBot - yTop)/(nodeNum-1);
+            console.log(firstNode);
+            console.log(lastNode);
+            console.log(nodeNum);
+            console.log(yBot);
+            console.log(yTop);
+            console.log(intervalTmp);
+            for(var j = 0; ; j++){
+                for (var i = 0; i < parentNode.children.length; i++) {
+                    firstNode.y = count * intervalTmp + yTop;
+                    findSvg(firstNode, svg)[0].setAttribute("cy", (count++) * intervalTmp + yTop);
+                    svg.childNodes[findSvg(firstNode, svg)[1] - 1].setAttribute("d", "M" + parentNode.x + " " + parentNode.y + " C" + (parentNode.x + firstNode.x) / 2 + " " + parentNode.y + " " + (parentNode.x + firstNode.x) / 2 + " " + firstNode.y + " " + firstNode.x + " " + firstNode.y);
+                    firstNode = findNextSibling(firstNode);
+                }
+
+                do {
+                    var recordParent = parentNode;
+                    parentNode = findNextSibling(parentNode);
+                    if(parentNode == undefined) {
+                        if(parentDeep == 2){
+                            console.log(findParent(recordParent));
+                            console.log(findNextSibling(findParent(recordParent)));
+                            if(findNextSibling(findParent(recordParent)) == undefined)
+                                break;
+                            parentNode = findNextSibling(findParent(recordParent)).children[0];
+                        }
+                        else
+                            break;
+                    }
+                }while(parentNode.shown == false);
+                if(parentNode == undefined)
+                    break;
+                firstNode = parentNode.children[0];
+            }
+        }
+//        function findNumOnDeep(deep){
+//            var num = 0;
+//            var node = findParent(findFirstOnDeep(deep));
+//            while(true){
+//                if(node.shown == true)
+//                    num += node.children.length;
+//                if(findNextSibling(node)==null) {
+//                    if(deep == 3){
+//                        var tmpNode = findNextSibling(findParent(node));
+//                        if(tmpNode == undefined)
+//                            break;
+//                        while(tmpNode.shown == false){
+//                            console.log(tmpNode);
+//                            tmpNode = findNextSibling(tmpNode);
+//                            if(tmpNode == undefined)
+//                                break;
+//                        }
+//                        if(tmpNode == undefined)
+//                            break;
+//                        node = tmpNode.children[0];
+//                    }
+//                    else
+//                        break;
+//                }
+//                node = findNextSibling(node);
+//            }
+//            return num;
+//        }
+        function findNumOnDeep(deep){
+            var num = 0;
+            if(deep == 0)
+                return 1;
+            else if(deep == 1) {
+                if (data.shown == true)
+                    return data.children.length;
+            }
+            else if(deep == 2){
+                    for(var i in data.children){
+                        console.log(data.children[i].shown);
+                        if(data.children[i].shown == true){
+                            console.log("in there!!")
+                            num+=data.children[i].children.length;
+                        }
+                    }
+                }
+            else if(deep == 3){
+                    for(var i in data.children){
+                        for(var j in data.children[i].children){
+                            if(data.children[i].children[j].shown == true)
+                                num+=data.children[i].children[j].children.length;
+                        }
+                    }
+                }
+            console.log(deep);
+            console.log(num);
+            return num;
+        }
+        function findFirstOnDeep(deep){
+            if(deep == 0)
+                return data;
+            if(deep == 1){
+                if(data.shown == true)
+                    return data.children[0];
+            }
+            if(deep == 2){
+                for(var i in data.children){
+                    if(data.children[i].shown == true)
+                        return data.children[i].children[0];
+                }
+            }
+            if(deep == 3){
+                for(var i in data.children){
+                    for(var j in data.children[i].children){
+                        if(data.children[i].children[j].shown == true)
+                            return data.children[i].children[j].children[0];
+                    }
+                }
+            }
+        }
+        function findLastOnDeep(deep){
+            if(deep == 0)
+                return data;
+            if(deep == 1){
+                if(data.shown == true)
+                    return data.children[data.children.length-1];
+            }
+            if(deep == 2){
+                for(var i = data.children.length-1; i >= 0; i--){
+                    if(data.children[i].shown == true)
+                        return data.children[i].children[data.children[i].children.length-1];
+                }
+            }
+            if(deep == 3){
+                for(var i = data.children.length-1; i >= 0; i--){
+                    for(var j = data.children[i].children.length-1; j >= 0; j--){
+                        if(data.children[i].children[j].shown == true)
+                            return data.children[i].children[j].children[data.children[i].children[j].children.length-1];
+                    }
+                }
+            }
+        }
+        function findNextSibling(node){
+            if(findParent(node) != null)
+                return (findParent(node).children[+node.index+1]);
+        }
+        function findPreviousSibling(node){
+            if(findParent(node) != null)
+                return (findParent(node).children[+node.index-1]);
+        }
+        function findParent(node){
+            for(var i in data.children){
+                if(data.children[i] == node)
+                    return data;
+                if(data.children[i].children != null)
+                    for(var j in data.children[i].children){
+                        if(data.children[i].children[j] == node)
+                            return data.children[i];
+                        if(data.children[i].children[j].children !=null)
+                            for(var k in data.children[i].children[j].children){
+                                if(data.children[i].children[j].children[k] == node){
+                                    return data.children[i].children[j];
+                                }
+                            }
+                    }
+            }
+        }
+        function findMaxDeep(){
+            var max = 0;
+            for(var i in data.children){
+                console.log("here");
+                if(data.children[i].children!=null)
+                    for(var j in data.children[i].children){
+                        if(data.children[i].children[j].children!=null)
+                            for(var k in data.children[i].children[j].children){
+                                if(data.children[i].children[j].children[k].circle!=null){
+                                    max = 3;
+                                    break;
+                                }
+                            }
+                        if(max == 3)
+                            break;
+                        if(data.children[i].children[j].circle!=null){
+                            max = 2;
+                            break;
+                        }
+                    }
+                if(max >= 2)
+                    break;
+                if(data.children[i].circle!=null){
+                    max = 1;
+                    break;
+                }
+            }
+            return max;
+        }
+        function findSvg(node, svg){
+            for(var i in svg.childNodes){
+                if(svg.childNodes[i] == node.circle)
+                    return [svg.childNodes[i], i];
+            }
+        }
+        function deleteSvg(data, svg){
+            for(var i in data.children){
+                for(var j in svg.childNodes){
+                    if(data.children[i].circle == svg.childNodes[j]){
+                        svg.removeChild(svg.childNodes[j]);
+                        svg.removeChild(svg.childNodes[j-1]);
+                        delete data.children[i].circle;
+                        delete data.children[i].x;
+                        delete data.children[i].y;
+                    }
+                }
+                if(data.children[i].children!=null)
+                    deleteSvg(data.children[i], svg);
+            }
         }
         function setClick(data, svg){
             if(data.children[0] != null)
@@ -433,8 +649,6 @@
 <script>
     var data = flare;
     var interval = 40;
-    var yTop = 100;
-    var yBot = 700;
     var tree = new tree();
     tree.start();
 </script>
